2006-04-14 Sandro Santilli <strk@refractions.net>

	* algorithm::HCoordinate: added output operator
	and debugging blocks.

2006-04-13 Sandro Santilli <strk@refractions.net>

	* geos::precision::CommonBitsOp: fixed bug
	in binary ops failing to translate both operands
	consistently.
	* capi/ (geostest.c, geos_c.cpp, geos_h.in): added GEOSSimplify()
	and GEOSTopologyPreserveSimplify() interfaces.
	Removed compiler warnings. Had libgeos_c use default
	GeometryFactory instance.
	* geos/source/simplify/DouglasPeuckerSimplifier.cpp:
	fixed bug in MultiPolygon handling of DPTransformer
	* tests/units/io/WKBReaderTest.cpp: forced NDR output
	for WKBWriter tests, removed CRs endings.
	* geos::simplify::TopologyPreservingSimplifier class
	* geos::simplify::TaggedLinesSimplifier class
	* source/geom/GeometryComponentFilter.cpp: filter_ro
	re-enabled.

2006-04-12 Sandro Santilli <strk@refractions.net>

	* headers/geos/simplify/Makefile.am: only install
	  DouglasPeuckerSimplifier.h header
	* geos::geom::LineSegment class made polymorphic to
	  allow derivation of TaggedLineSegment
	* geos::simplify::TaggedLineStringSimplifier class
	* geos::simplify:LineSegmentIndex class
	* geos::simplify:TaggedLineSegment class
	* geos::simplify:TaggedLineString class
	* geos::io::WKBReader: added default constructor
	  using default GeometryFactory, fixed exception
	  constructors.

2006-04-11 Sandro Santilli <strk@refractions.net>

	* geos::simplify::DouglasPeukerSimplifier class
	* geos::geom::util::GeometryTransformer class
	* source/headers/geos/geom/CoordinateSequence.h:
	  added AutoPtr typdef
	* source/headers/geos/geom/: LineString.h, LinearRing.h,
	  source/geom/: LineString.cpp, LinearRing.cpp:
	  added constructors by auto_ptr
	* source/headers/geos/geom/GeometryFactory.h,
	  source/geom/GeometryFactory.cpp:
	  added LineString and LinearRing constructors by auto_ptr

2006-04-10 Sandro Santilli <strk@refractions.net>
